<resources>
    <string name="app_name">MultiCalenderDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="multiple_selection_fragment_label">Multiple date Selector Fragment</string>
    <string name="single_selection_fragment_label">Single date Selection Fragment</string>
    <string name="horizontal_Calendar">Horizontal Calendar</string>
    <string name="single_date_selector">Single date Selector Calendar</string>
    <string name="multiple_date_selector">Multiple date Selector Calendar</string>
    <string name="MultiCalendar">MultiCalendar</string>
    <string name="sun">sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>


</resources>